# goal-tracker

./: .dockerignore  .env.example  .gitignore  AUTH_IMPLEMENTATION.md  Claude.md  DEPLOYMENT.md  Dockerfile.cloudrun  ENVIRONMENTS.md  GITHUB_SECRETS_SETUP.md  LOCAL_SETUP.md  QUICK_DEPLOY.md  README.md  STORAGE_SETUP.md  SUPABASE_MIGRATION.md  TEAMS_FEATURE_SUMMARY.md  cloudbuild.yaml  deploy-cloudrun.sh  deploy-manual.sh  docker-compose.yml  generate-version.sh  init_schema.sql  migrate.sh  production_migration.sql  run-local.sh  run-production.sh  run.sh  start-local.sh  stop-local.sh  test_supabase_sdk.py
.github/: DEPLOYMENT_SETUP.md
.github/workflows/: deploy-cloudrun.yml
backend/: .dockerignore  Dockerfile  README.md  migrate.sh  pyproject.toml  requirements.txt  run_migration.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  2025_01_04_1200-001_initial_goals_table.py
backend/app/: auth.py  config.py  crud.py  database.py  main.py  schemas.py  supabase_client.py
backend/app/models/: __init__.py  category.py  goal.py  goal_file.py  status.py  team.py  template.py
backend/app/routers/: categories.py  files.py  goals.py  health.py  statuses.py  teams.py
backend/migrations/: create_categories.sql
backend/tests/: README.md  run_tests.sh  test_integration.py
frontend/: .env.example  Dockerfile  MIGRATION_GUIDE.md  MVC_ARCHITECTURE.md  README.md  TYPESCRIPT_MIGRATION.md  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/public/: version.json
frontend/src/: App.jsx  App.tsx  main.tsx
supabase/: config.toml
(+81 files in other folders)
